--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
 		"@hookform/resolvers": "^2.5.1",
+		"@reduxjs/toolkit": "^1.5.1",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -18,6 +19,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.6.2",
+		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"sass": "^1.32.13",
