--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"private": true,
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
+		"@fortawesome/fontawesome-svg-core": "^1.2.35",
+		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@fortawesome/react-fontawesome": "^0.1.14",
 		"@hookform/resolvers": "^2.5.1",
 		"@reduxjs/toolkit": "^1.5.1",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"antd": "^4.15.5",
+		"aos": "^2.3.4",
 		"axios": "^0.21.1",
 		"hook-form": "^0.0.1",
 		"node-sass": "^6.0.0",
