--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"aos": "^2.3.4",
 		"axios": "^0.21.1",
 		"hook-form": "^0.0.1",
+		"moment": "^2.29.1",
 		"node-sass": "^6.0.0",
 		"notistack": "^1.0.9",
 		"query-string": "^7.0.1",
